--- a/NYK/index.html
+++ b/NYK/index.html
@@ -7,8 +7,11 @@
     <title>자바스크립트 딥다이브</title>
 </head>
 <body>
-<!--    <script src="20211213_01(변수).js"></script>-->
-    <script src="20211214_02(표현식과문).js"></script>
+<!--    <script src="20211213_04(변수).js"></script>-->
+<!--    <script src="20211214_05(표현식과문).js"></script>-->
+<!--    <script src="20211215_06(데이터타입).js"></script>-->
+<!--    <script src="20211216_07(연산자).js"></script>-->
+    <script src="20211217_08(제어문).js"></script>
     <h1>자바스크립트 딥다이브 연습 출력용</h1>
 </body>
 </html>
